--- a/src/scss/style-old.scss
+++ b/src/scss/style-old.scss
@@ -30,9 +30,8 @@ $font-xs: 5px;
 //structure
 $spacing-xs: 10px;
 $spacing-s: 20px;
-$spacing-m: 40px;
-$section-height-m: 600px;
-$section-height-l: 600px;
+$spacing-m: $spacing-s * 2;
+$section-height: 100vh;
 
 * {
   box-sizing: border-box;
@@ -43,8 +42,9 @@ body {
   margin: 0;
   background-color: $primary-colour;
 
+// !!! Make everything section under one roof
   section {
-    display: flex;
+    height: $section-height;
     padding: $spacing-m;
   }
 
@@ -68,7 +68,6 @@ body {
   header {
 
     div.banner {
-      flex-flow: nowrap column;
       text-align: center;
       background-color: #1b1b1b;
       color: $light-font;
@@ -78,81 +77,108 @@ body {
   main {
 
     section.bio {
-      flex-flow: wrap row;
+      display: flex;
       align-items: center;
-      width: 100%;
+      justify-content: space-around;
       background-color: $secondary-colour;
 
-      @media(min-width: 500px) {
-        padding: 0;
-      }
-
-      @media(min-width: 800px) {
-        flex-flow: nowrap row;
-        height: $section-height-l;
-      }
-
-
-
-      div.subsection {
+      > :not(.vr) {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        height: 100%;
-        width: 100%;
-        padding-top: $spacing-s;
-        padding-bottom: $spacing-m;
+        justify-content: center;
+        height: 80%;
+        width: (100% / 3);
+        padding: $spacing-s;
+        padding-left: $spacing-m;
+        padding-right: $spacing-m;
 
-        @media(min-width: 500px) {
-          padding: $spacing-m;
-          width: 50%;
-
-          &:nth-child(3) {
-            width: 100%;
-          }
+        h3 {
+          height: 15%;
         }
 
-        @media(min-width: 800px) {
-          &, &:nth-child(3) {
-            width: (100% / 3);
-          }
+        > p, > div {
+          padding-top: $spacing-xs;
+          height: 85%;
         }
 
         img {
           width: 100%;
         }
+      }
 
-        h3 {
-          padding-bottom: $spacing-m;
-        }
+      div.vr {
+        height: 30%;
+        border-left: 2px solid $primary-colour;
+      }
 
-        div.techs {
+      div.techs {
+        display: flex;
+        flex-wrap: wrap;
+
+        div {
           display: flex;
-          flex-flow: wrap row;
+          flex-direction: column;
+          align-items: center;
+          width: 25%;
+          height: 20%;
+          padding: $spacing-xs;
 
-          div {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: (100% / 3);
-            padding-bottom: $spacing-s;
-
-            i {
-              font-size: $font-l;
-            }
-          }
-
-          @media(min-width: 800px) {
-            div {
-              width: 25%;
-              i {
-                font-size: $font-m;
-              }
-            }
+          i {
+            font-size: $font-l;
           }
         }
       }
     }
+
+    @media(max-width: 1150px) {
+
+      section.bio {
+        padding: 0;
+
+        div.techs div {
+          width: (100% / 3);
+
+          i {
+            font-size: $font-m;
+          }
+
+          p {
+            font-size: $font-xs;
+          }
+        }
+      }
+    }
+
+    @media(max-width: 700px) {
+
+      section.bio {
+        flex-direction: column;
+        height: auto;
+
+        > :not(.vr) {
+          width: auto;
+        }
+
+        div.vr {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+hr {
+  width: 90%;
+  height: 2px;
+  margin: 0;
+  border: 1px solid black;
+
+  @media(min-width: 500px) {
+    width: 20%;
+  }
+
+  @media(min-width: 800px) {
+      width: 2px;
+      height: 40%;
   }
 }
