--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,7 +22,7 @@ $spacing-s: 20px;
 $spacing-m: 40px;
 $spacing-l: 60px;
 $spacing-xl: 100px;
-$spacing-xxl: 200px;
+$spacing-xxl: 150px;
 $section-height-m: 800px;
 
 // Media Query
@@ -42,11 +42,6 @@ body {
     height: 100vh;
     -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
-
-    section {
-      display: flex;
-      padding: $spacing-m;
-    }
 
     h1, h2, h3, h4, p, a, figure, {
       margin: 0;
@@ -83,12 +78,8 @@ body {
       flex-flow: nowrap column;
       align-items: center;
       justify-content: center;
-      height: 200px;
+      height: $spacing-xxl;
       color: $light-font;
-
-      @media(min-width: $width-tablet) {
-        height: 250px;
-      }
     }
 
     header {
@@ -240,10 +231,12 @@ body {
 
     main {
 
-      section {
+      section, section div.map-container {
+        display: flex;
         flex-flow: wrap row;
         align-items: center;
         width: 100%;
+        padding: $spacing-m;
         background-color: $secondary-colour;
 
         @media(min-width: $width-tablet) {
@@ -255,17 +248,25 @@ body {
           height: $section-height-m;
         }
 
-
+        img {
+          max-width: 100%;
+          max-height: 100%;
+          border: 10px solid $primary-colour;
+          border-radius: 3px;
+        }
 
         div.subsection {
           display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: flex-start;
+          justify-content: center;
           height: 100%;
           width: 100%;
           padding-top: $spacing-s;
           padding-bottom: $spacing-m;
+        }
+
+        div.section-third {
 
           @media(min-width: $width-tablet) {
             padding: $spacing-m;
@@ -278,17 +279,9 @@ body {
 
           @media(min-width: $width-desktop) {
             height: 75%;
+
             &, &:nth-child(3) {
               width: (100% / 3);
-            }
-          }
-
-          figure {
-            height: 100%;
-
-            img {
-              max-width: 100%;
-              max-height: 100%;
             }
           }
 
@@ -310,6 +303,46 @@ body {
               i {
                 font-size: $font-l;
               }
+            }
+          }
+        }
+
+        div.section-two-thirds {
+          width: (190% / 3);
+
+          @media(min-width: $width-tablet) {
+            width: 100%;
+            padding: $spacing-m;
+          }
+
+          @media(min-width: $width-desktop) {
+            width: (190% / 3);
+            padding: $spacing-m;
+          }
+
+          figure {
+            width: 100%;
+
+            img {
+              max-width: 100%;
+              max-height: 100%;
+            }
+          }
+        }
+      }
+
+      section.carousel div {
+
+        div.section-third {
+          width: 100%;
+
+          @media(min-width: $width-desktop) {
+            width: (100% / 3);
+          }
+
+          div.techs {
+            i {
+              font-size: $font-s;
             }
           }
         }
