--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,8 @@ $fourth-colour: #355884;
 $light-font: #fafafa;
 
 // Text
-$font-xs: 15px;
+$font-xxs: 15px;
+$font-xs: 18px;
 $font-s: 20px;
 $font-ms: 30px;
 $font-m: 40px;
@@ -69,11 +70,11 @@ body {
     }
 
     h5 {
-      font-size: $font-xs;
+      font-size: $font-xxs;
     }
 
     p {
-      font-size: $font-s;
+      font-size: $font-xs;
       letter-spacing: $spacing-xxs;
     }
 
@@ -357,49 +358,57 @@ body {
             height: 70%;
           }
 
-          div.section-third {
-            justify-content: flex-start;
-            width: 100%;
-            height: 100%;
+          > i:hover {
+            color: $light-font;
+          }
 
-            @media(min-width: $width-desktop) {
-              width: (100% / 3);
-            }
+          div {
+            display: flex;
 
-            h3 {
-              font-size: $font-ml;
-              padding-bottom: $spacing-xs;
-            }
-
-            h4 {
-              font-size: $font-ms;
-              padding-bottom: $spacing-s;
-            }
-
-            div:nth-child(2) {
-              display: flex;
-              justify-content: space-between;
-              width: 20%;
-              padding-bottom: $spacing-s;
-
-              a i {
-                font-size: $font-s;
-              }
-            }
-
-            div.techs {
+            div.section-third {
+              justify-content: flex-start;
               width: 100%;
-              justify-content: space-between;
+              height: 100%;
 
-              div {
+              @media(min-width: $width-desktop) {
+                width: (100% / 3);
+              }
+
+              h3 {
+                font-size: $font-ml;
+                padding-bottom: $spacing-xs;
+              }
+
+              h4 {
+                font-size: $font-ms;
+                padding-bottom: $spacing-s;
+              }
+
+              div:nth-child(2) {
+                display: flex;
+                justify-content: space-between;
                 width: 20%;
+                padding-bottom: $spacing-s;
 
-                i {
-                  font-size: $font-ms;
+                a i {
+                  font-size: $font-s;
                 }
+              }
 
-                h5 {
-                  font-size: $font-xs;
+              div.techs {
+                width: 100%;
+                justify-content: space-between;
+
+                div {
+                  width: 20%;
+
+                  i {
+                    font-size: $font-ms;
+                  }
+
+                  h5 {
+                    font-size: $font-xxs;
+                  }
                 }
               }
             }
