--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -342,9 +342,39 @@ body {
           }
 
           div.section-full {
-            justify-content: space-between;
             padding-left: $spacing-xxl;
             padding-right: $spacing-xxl;
+
+// clean up from here
+            > div {
+              display: flex;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              padding-bottom: $spacing-m;
+
+              div {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding-bottom: $spacing-s;
+// to here
+                h3 {
+                  padding-bottom: 0;
+                }
+              }
+            }
+            h4 {
+              padding-bottom: $spacing-xs;
+            }
+
+            p {
+              padding-bottom: $spacing-s;
+            }
+
+            li {
+              padding-bottom: $spacing-xxs;
+            }
           }
         }
       }
